# popfly-mcp-snowflake

./: .env.example  .env.testing  .gitignore  CLAUDE.md  Dockerfile  README_HTTP.md  cloudbuild.yaml  debug_query.py  deploy_to_vm.sh  docker-compose.yml  mcp-cli  package.json  pyproject.toml  requirements.txt  start_http_server.py  test_cortex_search.py  test_performance.py  test_tool_call.py  update_tool_description.sql  update_tool_in_db.py
PRPs/: INITIAL.md  SNOWFLAKE_MCP_SERVER.md
auth/: secret_manager.py  snowflake_auth.py  snowflake_auth_secure.py
auth_middleware/: bearer_auth.py  ip_auth.py  simple_auth.py
cli/: mcp_cli.py
config/: settings.py
cortex/: cortex_generator.py  cortex_generator_v2.py  generate_tool_description.py  generate_tool_description_dynamic.py  lineage_extractor.py  process_narrative.py  view_constraints_loader.py
deployment/: LESSONS.md  OPEN_WEBUI_INTEGRATION.md  current_deployment.md  deploy_logging_updates.md  deployment_instructions_mcp.md  setup_http_server.sh
docs/: 2025-08-12-refactoring-session.md  cursor_check_implementation_of_dynamic.md  narrative_metadata_flow.md  project_details.md  tool_description_analysis.md
examples/: README.md
initialsetup/: README.md
scripts/: refresh_cortex_search.sql
server/: mcp_server.py  mcp_server_http.py
sql/: make_read_query_internal.sql
tests/: README.md  test_auth.py  test_cortex_generation.py  test_dynamic_tools.py  test_integration.py  test_internal_tools.py  test_narrative_processor.py  test_no_database.py  test_sql_validation.py
tools/: cortex_tools.py  (+3 more)
(+61 files in other folders)
